# group6-ar-module

NetworkPlugin/: CMakeLists.txt  README.md  build_android.sh  setup_android_build.sh
NetworkPlugin/src/: NetworkInterface.cpp  NetworkInterface.h  WebSocketPlugin.cpp  WebSocketPlugin.h
Unity/: UpgradeLog.htm
Unity/Assets/Materials/: GrayFloorMaterial.mat
Unity/Assets/Prefabs/: AR Default Plane.prefab  Game Arena.prefab
Unity/Assets/Prefabs/Test/: Plane.prefab
Unity/Assets/Resources/LightningBolt/Demo/: LightningBoltDemoObjects.unity
Unity/Assets/Scenes/: Main Scene.unity  MainScene.unity  SampleScene.unity  Test Scene.unity
Unity/Assets/Scripts/: ARSceneManager.cs  ConnectionManager.cs  GameDataTypes.cs  GameStateManager.cs  ToDo.cs  WebSocketClient.cs
Unity/Assets/Scripts/AR/: ARSetup.cs  GameArena.cs  MainSceneManager.cs  PlayerSpawner.cs
Unity/Assets/Scripts/GameLogic/: GameController.cs  PlayerController.cs
Unity/Assets/Scripts/Network/: NetworkManager.cs  WebSocketClient.cs  WebSocketManager.cs
Unity/Assets/Scripts/Test/: ARTest.cs
Unity/Assets/Scripts/UI/: RoomJoinUI.cs
Unity/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
group6/: CMakeLists.txt  server.cpp
group6-ar/Assets/LightningBolt/Demo/: LightningBoltDemo.unity
group6-ar/Assets/Prefabs/: HealthBarContainer.prefab
group6-ar/Assets/Scenes/: SampleScene.unity
group6-ar/Assets/Scripts/: ARGameManager.cs  HealthBar.cs  WebSocketClient.cs
group6-ar/ProjectSettings/: ProjectSettings.asset
